--- a/src/jsx/components/Dashboard/VistaUsuarios/VistaUsuarioShow.css
+++ b/src/jsx/components/Dashboard/VistaUsuarios/VistaUsuarioShow.css
@@ -4,8 +4,8 @@
     background-image: url('La\ Predilecta.png'); /* Reemplaza 'background.jpg' con la ruta de tu imagen de fondo */
   background-size: cover; /* Ajusta la imagen para cubrir toda la pantalla */
   background-position: center; /* Centra la imagen en la pantalla */
-  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  background-repeat: no-repeat; /* Evita que la imagen se repita x*/
     background-color: #f7f7f7;
     padding: 30% 0;
     text-align: center;
-  }
+  } 
